Attempt to fix commonjs--resolver issue when building in CI env

--- a/packages/svg-icon-react/package.json
+++ b/packages/svg-icon-react/package.json
@@ -4,13 +4,12 @@
   "type": "module",
   "scripts": {
     "clean": "clean-dist",
-    "build": "pnpm run lint && tsc && esbuild src/*.{ts,tsx} --allow-overwrite --minify --outdir=dist --format=esm",
+    "build": "tsc && esbuild src/*.{ts,tsx} --allow-overwrite --minify --outdir=dist --format=esm",
     "lint": "eslint .",
     "preinstall": "npx only-allow pnpm",
     "prepublishOnly": "pnpm build"
   },
   "module": "./dist/index.js",
-  "main": "dist/index.js",
   "files": [
     "dist"
   ],
