--- a/packages/svg-icon/package.json
+++ b/packages/svg-icon/package.json
@@ -4,12 +4,13 @@
   "type": "module",
   "scripts": {
     "clean": "clean-dist",
-    "build": "tsc && esbuild src/*{.ts,tsx} --allow-overwrite --minify --outdir=dist --format=esm",
+    "build": "pnpm run lint && tsc && esbuild src/*{.ts,tsx} --allow-overwrite --minify --outdir=dist --format=cjs",
     "lint": "eslint .",
     "preinstall": "npx only-allow pnpm",
     "prepublishOnly": "pnpm build"
   },
   "module": "./dist/index.js",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
