Fix main entries

--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -15,7 +15,7 @@
     "build-storybook": "storybook build"
   },
   "module": "./dist/index.js",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "files": [
     "dist",
     "tailwind.config.js",
