--- a/packages/svg-icon-react/package.json
+++ b/packages/svg-icon-react/package.json
@@ -10,7 +10,7 @@
     "prepublishOnly": "pnpm build"
   },
   "module": "./dist/index.js",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "files": [
     "dist"
   ],
