--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -42,6 +42,8 @@
   "homepage": "https://github.com/harness/canary",
   "dependencies": {
     "@harnessio/canary": "workspace:*",
+    "@harnessio/svg-icon": "workspace:*",
+    "@harnessio/svg-icon-react": "workspace:*",
     "@harnessio/icons-noir": "workspace:*",
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
