--- a/packages/canary/package.json
+++ b/packages/canary/package.json
@@ -92,7 +92,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@harnessio/icons-noir": "workspace:*",
+    "@harnessio/icons-noir": "file:../icons-noir",
     "@chromatic-com/storybook": "^1.6.1",
     "@storybook/addon-essentials": "^8.2.4",
     "@storybook/addon-interactions": "^8.2.4",
