--- a/packages/icons-noir/package.json
+++ b/packages/icons-noir/package.json
@@ -32,14 +32,14 @@
   },
   "homepage": "https://github.com/harness/canary",
   "devDependencies": {
-    "@harnessio/svg-icon-cli": "workspace:*",
+    "@harnessio/svg-icon-cli": "file:../svg-icon-cli",
     "@types/react": "^18.3.3",
     "esbuild": "^0.23.0",
     "react": "^18.3.1",
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "@harnessio/svg-icon": "workspace:*",
-    "@harnessio/svg-icon-react": "workspace:*"
+    "@harnessio/svg-icon": "file:../svg-icon",
+    "@harnessio/svg-icon-react": "file:../svg-icon-react"
   }
 }
