Downgrade @storybook/react-vite

--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -102,7 +102,7 @@
     "@storybook/addon-themes": "^8.2.4",
     "@storybook/blocks": "^8.2.4",
     "@storybook/react": "^8.2.4",
-    "@storybook/react-vite": "^8.2.4",
+    "@storybook/react-vite": "8.2.0",
     "@storybook/test": "^8.2.4",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
