--- a/packages/icons-noir/package.json
+++ b/packages/icons-noir/package.json
@@ -36,8 +36,8 @@
     "esbuild": "^0.23.0",
     "react": "^18.3.1",
     "typescript": "^5.5.3"
-  },
-  "dependencies": {
+  },  
+  "peerDependencies": {
     "@harnessio/svg-icon": "file:../svg-icon",
     "@harnessio/svg-icon-react": "file:../svg-icon-react"
   }
