--- a/packages/svg-icon/package.json
+++ b/packages/svg-icon/package.json
@@ -4,21 +4,16 @@
   "type": "module",
   "scripts": {
     "clean": "clean-dist",
-    "build": "tsc && esbuild src/*{.ts,tsx} --allow-overwrite --minify --outdir=dist --format=esm",
+    "build": "tsc && esbuild src/*.ts --allow-overwrite --minify --outdir=dist --format=esm",
     "lint": "eslint .",
     "prepublishOnly": "npm run build"
   },
   "module": "./dist/index.js",
-  "main": "./dist/index.js",
   "files": [
     "dist"
   ],
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js"
-    }
-  },
+  "exports":  "./dist/index.js",
   "sideEffects": false,
   "repository": {
     "type": "git",
@@ -28,6 +23,9 @@
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/harness/canary/issues"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "homepage": "https://github.com/harness/canary",
   "devDependencies": {
