--- a/packages/icons-noir/package.json
+++ b/packages/icons-noir/package.json
@@ -4,22 +4,20 @@
   "description": "Noir icons set in React",
   "type": "module",
   "module": "./dist/index.js",
-  "main": "./dist/index.js",
   "files": [
     "dist"
   ],
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js"
-    }
-  },
+  "exports": "./dist/index.js",
   "sideEffects": false,
   "scripts": {
     "clean": "clean-dist",
     "generate": "svg2icon --iconset=noir --icon --singleColor --allowedColors=black,white",
     "build": "clean-dist && npm run generate && tsc && esbuild src/components/*.{ts,tsx} --allow-overwrite --minify --outdir=dist --format=esm",
     "prepublishOnly": "npm build"
+  },  
+  "engines": {
+    "node": ">=18"
   },
   "repository": {
     "type": "git",
