--- a/packages/canary/package.json
+++ b/packages/canary/package.json
@@ -40,7 +40,10 @@
     "url": "https://github.com/harness/canary/issues"
   },
   "homepage": "https://github.com/harness/canary",
-  "dependencies": {
+  "peerDependencies": {
+    "react": "^18.3.1" 
+  },
+  "devDependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -88,20 +91,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "vite-plugin-svgr": "^4.2.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
+    "zod": "^3.23.8",  
     "@harnessio/icons-noir": "file:../icons-noir",
-    "@chromatic-com/storybook": "^1.6.1",
-    "@storybook/addon-essentials": "^8.2.4",
-    "@storybook/addon-interactions": "^8.2.4",
-    "@storybook/addon-links": "^8.2.4",
-    "@storybook/addon-onboarding": "^8.2.4",
-    "@storybook/addon-themes": "^8.2.4",
-    "@storybook/blocks": "^8.2.4",
-    "@storybook/react": "^8.2.4",
-    "@storybook/react-vite": "^8.2.4",
-    "@storybook/test": "^8.2.4",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -110,17 +101,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
-    "storybook": "^8.2.4",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
