--- a/packages/svg-icon-react/package.json
+++ b/packages/svg-icon-react/package.json
@@ -9,11 +9,12 @@
     "prepublishOnly": "npm run build"
   },
   "module": "./dist/index.js",
+  "main": "./dist/index.js",
   "files": [
     "dist"
   ],
   "types": "./dist/index.d.ts",
-  "exports":  "./dist/index.js",
+  "exports": "./dist/index.js",
   "sideEffects": false,
   "repository": {
     "type": "git",
