--- a/packages/svg-icon-react/package.json
+++ b/packages/svg-icon-react/package.json
@@ -1,17 +1,14 @@
 {
   "name": "@harnessio/svg-icon-react",
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
     "clean": "clean-dist",
     "build": "tsc && esbuild src/*.{ts,tsx} --allow-overwrite --minify --outdir=dist --format=esm",
     "lint": "eslint .",
     "prepublishOnly": "npm run build"
   },
-  "module": "./src/index.ts",
-  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "files": [
-    "src",
     "dist"
   ],
   "types": "./dist/index.d.ts",
