--- a/packages/svg-icon-react/package.json
+++ b/packages/svg-icon-react/package.json
@@ -7,12 +7,20 @@
     "lint": "eslint .",
     "prepublishOnly": "npm run build"
   },
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    }
+  },
+  "main": "./dist/index.js",
   "module": "./dist/index.js",
   "files": [
     "dist"
   ],
   "types": "./dist/index.d.ts",
-  "exports": "./dist/index.js",
   "sideEffects": false,
   "repository": {
     "type": "git",
