--- a/packages/svg-icon-react/package.json
+++ b/packages/svg-icon-react/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "scripts": {
     "clean": "clean-dist",
-    "build": "tsc && esbuild src/*.{ts,tsx} --allow-overwrite --minify --outdir=dist --format=esm",
+    "build:cjs": "tsc && esbuild src/*.{ts,tsx} --allow-overwrite --minify --outdir=dist/cjs --format=cjs",
+    "build:esm": "tsc && esbuild src/*.{ts,tsx} --allow-overwrite --minify --outdir=dist --format=esm",
+    "build": "npm run build:esm && npm run build:cjs",
     "lint": "eslint .",
     "prepublishOnly": "npm run build"
   },
@@ -12,11 +14,15 @@
       "import": {
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/cjs/index.js"
       }
     }
   },
-  "main": "./dist/index.js",
   "module": "./dist/index.js",
+  "main": "./dist/cjs/index.js",
   "files": [
     "dist"
   ],
