--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "@harnessio/canary": "file:../../packages/canary",
     "@harnessio/svg-icon": "file:../../packages/svg-icon",
-    "@harnessio/svg-icon-react": "^0.1.0",
+    "@harnessio/svg-icon-react": "file:../../packages/svg-icon-react",
     "@harnessio/icons-noir": "file:../../packages/icons-noir",
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
