--- a/.github/workflows/build-and-deploy-storybook.yml
+++ b/.github/workflows/build-and-deploy-storybook.yml
@@ -44,7 +44,6 @@ jobs:
           npm remove @harnessio/canary @harnessio/icons-noir
           npm add @harnessio/canary @harnessio/icons-noir @harnessio/svg-icon @harnessio/svg-icon-react
 
-          cat package.json
           npm install
 
           npm run build
@@ -53,6 +52,7 @@ jobs:
           cp -rf ../../packages/svg-icon/dist ./node_modules/@harnessio/svg-icon/dist
           cp -rf ../../packages/svg-icon-react/dist ./node_modules/@harnessio/svg-icon-react/dist
           cp -rf ../../packages/icons-noir/dist ./node_modules/@harnessio/icons-noir/dist
+          cp -rf ../../packages/canary/src ./node_modules/@harnessio/canary/
           cp -rf ../../packages/canary/dist ./node_modules/@harnessio/canary/dist
 
           ls -la node_modules/@harnessio
