Changes for package publish

--- a/packages/unified-pipeline/package.json
+++ b/packages/unified-pipeline/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "run-p webpack typed-scss",
     "webpack": "NODE_ENV=development webpack serve",
+    "clean": "rm -rf dist",
+    "build": "npm run clean;vite build",
     "watch": "webpack --watch",
     "typed-scss": "typed-scss-modules src --watch"
   },
@@ -20,14 +22,18 @@
   "devDependencies": {
     "@storybook/react": "^8.2.4",
     "@types/classnames": "^2.3.1",
+    "@types/dagre": "^0.7.52",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.18",
+    "classnames": "^2.5.1",
     "css-loader": "^6.10.0",
+    "dagre": "^0.8.5",
     "dts-bundle-generator": "^6.4.0",
+    "elkjs": "^0.9.3",
     "html-webpack-plugin": "^5.6.0",
     "iconoir-react": "^7.3.0",
     "lodash-es": "^4.17.21",
@@ -35,7 +41,9 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-live": "^4.1.5",
+    "reactflow": "^11.11.4",
     "sass": "^1.32.8",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.3.4",
@@ -43,15 +51,11 @@
     "ts-loader": "^9.5.1",
     "typed-scss-modules": "^7.1.4",
     "typescript": "^5.3.3",
+    "vite": "^5.3.4",
+    "vite-plugin-dts": "^4.0.0-beta.1",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "@types/dagre": "^0.7.52",
-    "classnames": "^2.5.1",
-    "dagre": "^0.8.5",
-    "elkjs": "^0.9.3",
-    "react-copy-to-clipboard": "^5.1.0",
-    "reactflow": "^11.11.4",
     "yaml": "^2.4.5",
     "yaml-loader": "^0.8.1",
     "zustand": "^4.5.4"
