Updating package json

--- a/packages/unified-pipeline/package.json
+++ b/packages/unified-pipeline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harnessio/unified-pipeline",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Reusable Graph rendering component library",
   "scripts": {
     "dev": "run-p webpack typed-scss",
@@ -11,6 +11,7 @@
     "watch": "webpack --watch",
     "typed-scss": "typed-scss-modules src --watch"
   },
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/harness/canary/tree/main/packages/unified-pipeline"
