--- a/packages/unified-pipeline/package.json
+++ b/packages/unified-pipeline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harnessio/unified-pipeline",
-  "version": "0.0.4",
+  "version": "0.0.10",
   "description": "Reusable Graph rendering component library",
   "scripts": {
     "dev": "run-p webpack typed-scss",
@@ -8,6 +8,7 @@
     "clean": "rm -rf dist",
     "build": "npm run clean;vite build",
     "publish": "npm publish -r --access public",
+    "build-publish": "npm run build; npm run publish",
     "watch": "webpack --watch",
     "typed-scss": "typed-scss-modules src --watch"
   },
@@ -29,6 +30,7 @@
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.0",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.18",
     "classnames": "^2.5.1",
     "css-loader": "^6.10.0",
@@ -64,7 +66,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "reactflow": "^11.11.4"
   },
   "peerDependencies": {
     "react": "^18.2.0",
