--- a/packages/canary/package.json
+++ b/packages/canary/package.json
@@ -4,8 +4,9 @@
   "version": "0.2.1",
   "type": "module",
   "scripts": {
-    "dev": "pnpm storybook",
+    "dev": "npm-run-all -p build:watch build:css -- --watch",
     "build": "vite build && pnpm build:css",
+    "build:watch": "vite build --watch --emptyOutDir=false",
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./dist/styles.css",
     "lint": "eslint ./src",
     "shadcn:update": "npx shadcn-ui@latest add -a -o -y",
@@ -100,6 +101,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "globals": "^15.8.0",
     "moment": "^2.30.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.4",
