--- a/packages/canary/package.json
+++ b/packages/canary/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@harnessio/canary",
   "private": false,
-  "version": "0.2.16",
+  "version": "0.2.17-beta.1",
   "type": "module",
   "scripts": {
     "dev": "npm-run-all -p build:watch build:css -- --watch",
@@ -38,6 +38,9 @@
     "url": "https://github.com/harness/canary/issues"
   },
   "homepage": "https://github.com/harness/canary",
+  "peerDependencies": {
+    "react-hook-form": "^7.52.0"
+  },
   "dependencies": {
     "@harnessio/icons-noir": "workspace:*",
     "@hookform/resolvers": "^3.6.0",
@@ -81,7 +84,6 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.0",
     "react-resizable-panels": "^2.0.19",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
