--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.48.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "react-router-dom": "^6.26.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
