--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,13 +1,30 @@
 {
-  "name": "playground",
+  "name": "@harnessio/playground",
   "version": "0.0.1",
-  "type": "module",
-  "private": true,
+  "description": "Harness Unified Pipeline Playground",
   "scripts": {
     "dev": "vite",
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./public/styles.css",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "build": "vite build",
+    "build:watch": "vite build --watch",
+    "prepublishOnly": "pnpm build"
   },
+  "private": false,
+  "type": "module",
+  "module": "./dist/index.js",
+  "main": "./dist/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    },
+    "./styles": "./dist/style.css"
+  },
+  "style": "./dist/style.css",
   "repository": {
     "type": "git",
     "url": "https://github.com/harness/canary.git"
@@ -23,6 +40,7 @@
     "@harnessio/icons-noir": "workspace:*",
     "@harnessio/svg-icon": "workspace:*",
     "@harnessio/svg-icon-react": "workspace:*",
+    "@harnessio/unified-pipeline": "workspace:*",
     "@rollup/plugin-yaml": "^4.1.2",
     "@uiw/react-markdown-preview": "^4.1.15",
     "caret-xy": "^2.0.3",
@@ -42,12 +60,14 @@
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "@vitejs/plugin-react": "^4.0.4",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.48.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "react-router-dom": "^6.26.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-dts": "^3.9.1"
   }
 }
