--- a/packages/unified-pipeline/package.json
+++ b/packages/unified-pipeline/package.json
@@ -4,6 +4,7 @@
   "description": "Harness Unified Pipeline ibrary",
   "scripts": {
     "dev": "run-p typed-scss build:watch",
+    "build:css": "npx tailwindcss -i ./src/styles.css -o ./public/styles.css",
     "build": "vite build",
     "build:watch": "vite build --watch",
     "typed-scss": "typed-scss-modules src --watch",
@@ -33,6 +34,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@harnessio/canary": "workspace:*",
     "@types/node": "^22.2.0",
     "classnames": "^2.5.1",
     "dagre": "^0.8.5",
@@ -42,7 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.11.4",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.4",
     "web-worker": "^1.0.0"
   },
   "devDependencies": {
