--- a/packages/unified-pipeline/package.json
+++ b/packages/unified-pipeline/package.json
@@ -37,7 +37,7 @@
     "classnames": "^2.5.1",
     "dagre": "^0.8.5",
     "elkjs": "^0.9.3",
-    "iconoir-react": "^7.3.0",
+    "@harnessio/icons-noir": "^0.2.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
