--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -56,6 +56,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jsx-match": "^1.1.5",
     "react-keywords": "^1.0.0",
     "yaml-loader": "^0.8.1"
   },
