--- a/packages/unified-pipeline/package.json
+++ b/packages/unified-pipeline/package.json
@@ -22,6 +22,7 @@
     ".": {
       "import": "./dist/index.js"
     },
+    "./tailwind.config": "./tailwind.config.js",
     "./styles": "./dist/style.css"
   },
   "style": "./dist/style.css",
