add vite config for standalone build

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -10,6 +10,7 @@
     "watch": "vite",
     "build": "vite build",
     "build:watch": "vite build --watch",
+    "build-for-standalone": "NODE_ENV=production vite build --config vite.config.standalone.ts",
     "prepublishOnly": "pnpm build",
     "lint": "eslint ./src",
     "pretty": "prettier --check ./src",
