--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -28,6 +28,7 @@
     ".": {
       "import": "./dist/index.js"
     },
+    "./tailwind.config": "./tailwind.config.js",
     "./styles": "./dist/style.css"
   },
   "style": "./dist/style.css",
