--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@harnessio/playground": "workspace:*",
+    "@harnessio/canary": "workspace:*",
     "prettier": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
