--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -11,7 +11,6 @@
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm",
     "pre-commit": "lint-staged",
-    "services": "restful-react import --config restful-react.config.cjs",
     "postservices": "prettier --write src/services/**/*.tsx"
   },
   "dependencies": {
@@ -21,8 +20,7 @@
     "@tanstack/react-query": "4.36.1",
     "prettier": "^3.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "restful-react": "15.6.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
