remove icons noir components in canary/unified-pipeline for harness-core-ui

--- a/packages/unified-pipeline/package.json
+++ b/packages/unified-pipeline/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@harnessio/unified-pipeline",
-  "version": "0.2.0",
+  "version": "0.3.0-beta1",
   "description": "Harness Unified Pipeline ibrary",
   "scripts": {
     "dev": "run-p typed-scss build:watch",
