--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm",
     "pre-commit": "lint-staged",
-    "postservices": "prettier --write src/services/**/*.tsx"
+    "postservices": "prettier --write src/services/**/*.tsx",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@harnessio/canary": "workspace:*",
