--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.3.1",
     "uuid": "^8.3.0",
     "zod": "^3.23.8",
+    "react-hook-form": "7.53.0",
     "@hookform/resolvers": "^3.9.0",
     "yup": "^0.29.1"
   },
@@ -46,10 +47,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.0",
     "@types/yup": "^0.29.0",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -59,13 +56,7 @@
     "@types/uuid": "^8.3.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "rollup": "3.29.4",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-watch": "^4.3.1",
-    "sass": "^1.71.1",
     "ts-jest": "^29.1.2",
-    "tslib": "^2.6.2",
     "yup": "^0.29.1",
     "dts-bundle-generator": "^6.4.0",
     "npm-run-all": "^4.1.5",
