--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -5,13 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build && pnpm build:css",
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./public/styles.css",
     "lint": "eslint .",
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm",
     "pre-commit": "lint-staged",
-    "postservices": "prettier --write src/services/**/*.tsx",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -19,20 +18,20 @@
     "@harnessio/code-service-client": "1.1.0",
     "@harnessio/playground": "workspace:*",
     "@tanstack/react-query": "4.36.1",
-    "prettier": "^3.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "prettier": "^3.0.3",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "react-router-dom": "^6.26.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
