--- a/packages/unified-pipeline/package.json
+++ b/packages/unified-pipeline/package.json
@@ -4,7 +4,7 @@
   "description": "Harness Unified Pipeline ibrary",
   "scripts": {
     "dev": "run-p typed-scss build:watch",
-    "build:css": "npx tailwindcss -i ./src/styles.css -o ./dist/tw-styles.css",
+    "build:css": "npx tailwindcss -i ./src/styles.css -o ./public/tw-styles.css",
     "build": "pnpm build:css && vite build",
     "build:watch": "vite build --watch",
     "typed-scss": "typed-scss-modules src --watch",
@@ -15,7 +15,8 @@
   "module": "./dist/index.js",
   "main": "./dist/index.js",
   "files": [
-    "dist"
+    "dist",
+    "public"
   ],
   "types": "./dist/index.d.ts",
   "exports": {
@@ -24,7 +25,7 @@
     },
     "./tailwind.config": "./tailwind.config.js",
     "./styles": "./dist/style.css",
-    "./tw-styles": "./dist/tw-styles.css"
+    "./tw-styles": "./public/tw-styles.css"
   },
   "style": "./dist/style.css",
   "repository": {
