--- a/packages/canary/package.json
+++ b/packages/canary/package.json
@@ -107,6 +107,7 @@
     "jest": "^29.7.0",
     "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
+    "postcss-import": "^16.1.0",
     "prop-types": "^15.8.1",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1",
