chore: css bundling fixes

--- a/packages/playground/tsconfig.json
+++ b/packages/playground/tsconfig.json
@@ -16,7 +16,7 @@
     "outDir": "./dist",
     "declaration": true
   },
-  "include": ["./src/**/*", "./global.d.ts"],
+  "include": ["./src/**/*", "./global.d.ts", "vite-env.d.ts"],
   "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
