--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "run-p watch:css watch",
+    "watch": "vite",
     "build": "vite build && pnpm build:css",
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./public/styles.css",
+    "watch:css": "pnpm build:css --watch",
     "lint": "eslint .",
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm",
@@ -22,11 +24,11 @@
     "@harnessio/yaml-editor": "workspace:*",
     "@tanstack/react-query": "4.36.1",
     "clsx": "^2.1.1",
+    "lodash-es": "^4.17.21",
     "monaco-editor": "0.50.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "yaml": "^2.5.0",
-    "lodash-es": "^4.17.21"
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -38,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "react-router-dom": "^6.26.0",
     "tailwindcss": "^3.4.4",
