--- a/packages/canary/package.json
+++ b/packages/canary/package.json
@@ -19,7 +19,7 @@
   "files": [
     "dist",
     "tailwind.config.js",
-    "src/styles.css"
+    "dist/styles.css"
   ],
   "types": "./dist/index.d.ts",
   "exports": {
