--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -22,25 +22,26 @@
     "@harnessio/playground": "workspace:*",
     "@harnessio/unified-pipeline": "workspace:*",
     "@harnessio/yaml-editor": "workspace:*",
+    "@harnessio/icons-noir": "workspace:*",
     "@tanstack/react-query": "4.36.1",
     "clsx": "^2.1.1",
+    "event-source-polyfill": "^1.0.22",
+    "jotai": "^2.6.3",
+    "lodash-es": "^4.17.21",
     "monaco-editor": "0.50.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "yaml": "^2.5.0",
-    "zod": "^3.23.8",
-    "lodash-es": "^4.17.21",
-    "jotai": "^2.6.3",
-    "event-source-polyfill": "^1.0.22"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/event-source-polyfill": "^1.0.0",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "@types/event-source-polyfill": "^1.0.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
