--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@harnessio/canary": "workspace:*",
-    "@harnessio/code-service-client": "1.3.16",
+    "@harnessio/code-service-client": "1.4.0-beta-3",
     "@harnessio/forms": "workspace:*",
     "@harnessio/playground": "workspace:*",
     "@harnessio/unified-pipeline": "workspace:*",
