--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@harnessio/canary": "workspace:*",
-    "@harnessio/code-service-client": "2.0.0-beta-1",
+    "@harnessio/code-service-client": "2.0.2",
     "@harnessio/forms": "workspace:*",
     "@harnessio/playground": "workspace:*",
     "@harnessio/unified-pipeline": "workspace:*",
