--- a/.github/workflows/build-and-deploy-storybook.yml
+++ b/.github/workflows/build-and-deploy-storybook.yml
@@ -3,11 +3,23 @@ on:
   push:
 
 jobs:
+  lint:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Lint
+        run: pnpm lint
+  prettier:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Prettier
+        run: pnpm pretty
+  typecheck:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Typecheck
+        run: pnpm typecheck
   build:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [18]
     steps:
       - uses: actions/checkout@v4
 
@@ -20,40 +32,4 @@ jobs:
           pnpm deps
 
       - name: Build all packages
-        run: |
-          pnpm run build
-
-      - name: Lint
-        run: pnpm lint
-
-      - name: prettier
-        run: pnpm pretty
-
-      # - name: Build storybook
-      #   run: |
-      #     cd apps/storybook
-
-      #     # Note: `build-storybook` fails under CI due to some unknown synlink issue
-      #     # Workaround by copying the Canary's package files into the storybook/node_modules folder
-
-      #     pnpm remove @harnessio/canary @harnessio/icons-noir @harnessio/svg-icon @harnessio/svg-icon-react @harnessio/unified-pipeline
-      #     pnpm add @harnessio/canary @harnessio/icons-noir @harnessio/svg-icon @harnessio/svg-icon-react @harnessio/unified-pipeline
-
-      #     pnpm install
-
-      #     # ls -la node_modules/@harnessio
-
-      #     cp -rf ../../packages/svg-icon/dist ./node_modules/@harnessio/svg-icon/dist
-      #     cp -rf ../../packages/svg-icon-react/dist ./node_modules/@harnessio/svg-icon-react/dist
-      #     cp -rf ../../packages/icons-noir/dist ./node_modules/@harnessio/icons-noir/dist
-      #     cp -rf ../../packages/canary/src ./node_modules/@harnessio/canary/
-      #     cp -rf ../../packages/canary/dist ./node_modules/@harnessio/canary/dist
-      #     cp -rf ../../packages/unified-pipeline/dist ./node_modules/@harnessio/unified-pipeline/dist
-
-      #     # ls -la node_modules/@harnessio
-
-      #     pnpm run build-storybook
-
-      # NETLIFY_AUTH_TOKEN and NETLIFY_SITE_ID environment variables are needed
-      # - name: Deploy StoryBook to Netlify
-      #   run: netlify deploy --prod --debug --dir=/harness/apps/storybook/storybook-static
+        run: pnpm run build
