--- a/.github/workflows/build-and-deploy-storybook.yml
+++ b/.github/workflows/build-and-deploy-storybook.yml
@@ -25,20 +25,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
       - run: pnpm deps
+      - run: pnpm build
       - run: pnpm typecheck
-
-  Build:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Use pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Install dependencies
-        run: |
-          pnpm install
-          pnpm deps
-
-      - name: Build all packages
-        run: pnpm run build
