--- a/packages/canary/package.json
+++ b/packages/canary/package.json
@@ -10,6 +10,7 @@
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./dist/styles.css",
     "lint": "eslint ./src",
     "pretty": "prettier --check ./src",
+    "typecheck": "tsc",
     "shadcn:update": "npx shadcn-ui@latest add -a -o -y",
     "prepublishOnly": "pnpm build",
     "pre-commit": "lint-staged"
