--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -14,6 +14,7 @@
     "prepublishOnly": "pnpm build",
     "lint": "eslint ./src",
     "pretty": "prettier --check ./src",
+    "typecheck": "tsc",
     "pre-commit": "lint-staged"
   },
   "private": false,
