get playground to a compiling state

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -8,9 +8,7 @@
     "watch:css": "pnpm build:css --watch",
     "preinstall": "npx only-allow pnpm",
     "watch": "vite",
-    "build": "vite build && pnpm build:css",
-    "build:watch": "vite build --watch",
-    "build-for-standalone": "NODE_ENV=production vite build --config vite.config.standalone.ts",
+    "build": "pnpm build:css && NODE_ENV=production vite build",
     "prepublishOnly": "pnpm build",
     "lint": "eslint ./src",
     "pretty": "prettier --check ./src",
@@ -48,6 +46,7 @@
     "@git-diff-view/react": "^0.0.16",
     "@git-diff-view/shiki": "^0.0.16",
     "@harnessio/canary": "workspace:*",
+    "@harnessio/fragments": "workspace:*",
     "@harnessio/forms": "workspace:*",
     "@harnessio/icons-noir": "workspace:*",
     "@harnessio/unified-pipeline": "workspace:*",
