--- a/packages/views/package.json
+++ b/packages/views/package.json
@@ -13,7 +13,8 @@
     "prepublishOnly": "pnpm build",
     "lint": "eslint ./src",
     "pretty": "prettier --check ./src",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "typecheck": "tsc"
   },
   "private": false,
   "type": "module",
