--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -11,6 +11,7 @@
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./public/styles.css",
     "lint": "eslint .",
     "pretty": "prettier --check ./src",
+    "typecheck": "tsc",
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm",
     "pre-commit": "lint-staged",
