--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,16 +7,26 @@
   },
   "extends": [
     "eslint:recommended",
+
+    "plugin:import/recommended",
+    "plugin:import/typescript",
+    "plugin:@typescript-eslint/recommended",
+
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
+
     "plugin:jsx-a11y/recommended",
-    "plugin:@typescript-eslint/recommended",
+
     "plugin:tailwindcss/recommended",
     "prettier"
   ],
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "typescript": true,
+      "node": true
     }
   },
   "parser": "@typescript-eslint/parser",
@@ -27,14 +37,14 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier", "tailwindcss", "react", "react-hooks"],
+  "plugins": ["@typescript-eslint", "tailwindcss", "react", "react-hooks", "import", "prettier"],
   "rules": {
     "tailwindcss/classnames-order": "warn",
     "tailwindcss/no-custom-classname": "warn",
     "tailwindcss/no-contradicting-classname": "error",
+    "@typescript-eslint/consistent-type-imports": "error",
     "react/prop-types": "warn",
     "react/react-in-jsx-scope": "off"
-
   },
   "ignorePatterns": ["**/dist/**"]
 }
