--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -39,6 +39,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-intl": "^6.8.7",
     "yaml": "^2.5.0",
     "zod": "^3.23.8"
   },
