--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,12 +40,19 @@
   "plugins": ["@typescript-eslint", "tailwindcss", "react", "react-hooks", "import", "prettier"],
   "rules": {
     "tailwindcss/classnames-order": "warn",
-    "tailwindcss/no-custom-classname": "warn",
     "tailwindcss/no-contradicting-classname": "error",
-    "@typescript-eslint/consistent-type-imports": "error",
     "import/no-unresolved": "off",
     "react/prop-types": "warn",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+
+    "tailwindcss/no-custom-classname": "off",
+    "import/default": "off",
+    "jsx-a11y/anchor-is-valid": "warn",
+    "jsx-a11y/click-events-have-key-events": "warn",
+    "jsx-a11y/no-static-element-interactions": "warn",
+    "jsx-a11y/no-autofocus": "warn",
+    "@typescript-eslint/consistent-type-imports": "warn",
+    "jsx-a11y/tabindex-no-positive": "warn"
   },
   "ignorePatterns": ["**/dist/**"]
 }
