fix: [PIPE-23302]: temporarily remove pretty script from playground and views

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,7 +55,8 @@
     "jsx-a11y/tabindex-no-positive": "warn",
     "react/jsx-key": "warn",
     "react/no-unescaped-entities": "warn",
-    "react/display-name": "warn"
+    "react/display-name": "warn",
+    "@typescript-eslint/no-unused-vars": "warn"
   },
   "ignorePatterns": ["**/dist/**"]
 }
