--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -41,7 +41,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "yaml": "^2.5.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
