--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -3,18 +3,24 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "lang": "./src/lang",
+  "supportedLocales": [
+    "en",
+    "fr"
+  ],
   "scripts": {
     "dev": "run-p watch:css watch",
     "watch": "vite",
     "watch:css": "pnpm build:css --watch",
-    "build": "pnpm build:css && vite build",
+    "build": "pnpm build:css && vite build && pnpm compile:lang",
     "build:css": "npx tailwindcss -i ./src/styles.css -o ./public/styles.css",
     "lint": "eslint .",
     "pretty": "prettier --check ./src",
     "preview": "vite preview",
     "preinstall": "npx only-allow pnpm",
     "pre-commit": "lint-staged",
-    "test": "vitest"
+    "test": "vitest",
+    "compile:lang": "formatjs compile src/lang/en.json --ast --out-file dist/lang/en.json"
   },
   "dependencies": {
     "@harnessio/canary": "workspace:*",
@@ -45,6 +51,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@formatjs/cli": "^6.3.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^13.4.0",
     "@types/event-source-polyfill": "^1.0.0",
