--- a/packages/views/package.json
+++ b/packages/views/package.json
@@ -74,6 +74,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.53.0",
+    "react-intl": "^6.8.7",
     "react-keywords": "^1.0.0",
     "rehype-external-links": "^3.0.0",
     "rehype-sanitize": "^6.0.0",
