--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -66,7 +66,8 @@
     "vite": "^5.4.1",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vitest": "^2.1.2",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "immer": "^10.1.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
