--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "diff2html": "3.4.22",
     "event-source-polyfill": "^1.0.22",
+    "i18next": "^23.16.5",
     "jotai": "^2.6.3",
     "lang-map": "^0.4.0",
     "lodash-es": "^4.17.21",
@@ -40,6 +41,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.1.1",
     "yaml": "^2.5.0",
     "zod": "^3.23.8"
   },
