--- a/packages/views/package.json
+++ b/packages/views/package.json
@@ -61,6 +61,7 @@
     "diff2html": "3.4.22",
     "fast-diff": "^1.3.0",
     "highlight.js": "^11.9.0",
+    "i18next": "^23.16.5",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.407.0",
     "match-sorter": "^6.3.1",
@@ -73,6 +74,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.53.0",
+    "react-i18next": "^15.1.1",
     "react-keywords": "^1.0.0",
     "rehype-external-links": "^3.0.0",
     "rehype-sanitize": "^6.0.0",
