--- a/apps/gitness/tsconfig.json
+++ b/apps/gitness/tsconfig.json
@@ -21,5 +21,5 @@
 
     "types": ["vitest/globals"]
   },
-  "include": ["src", "./global.d.ts", "vite.config.ts"]
+  "include": ["src", "./global.d.ts", "vite.config.ts", "lingui.config.ts"]
 }
