--- a/packages/views/package.json
+++ b/packages/views/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint ./src",
     "pretty": "prettier --check ./src",
     "pre-commit": "lint-staged",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "messages:extract": "lingui extract"
   },
   "private": false,
   "type": "module",
@@ -52,6 +53,10 @@
     "@harnessio/unified-pipeline": "workspace:*",
     "@harnessio/yaml-editor": "workspace:*",
     "@hookform/resolvers": "^3.6.0",
+    "@lingui/conf": "^4.14.0",
+    "@lingui/core": "^4.14.0",
+    "@lingui/macro": "^4.14.0",
+    "@lingui/react": "^4.14.0",
     "@monaco-editor/react": "4.6.0",
     "@rollup/plugin-yaml": "^4.1.2",
     "@types/yup": "^0.29.0",
@@ -82,6 +87,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@lingui/cli": "^4.14.0",
+    "@lingui/swc-plugin": "^4.1.0",
+    "@lingui/vite-plugin": "^4.14.0",
+    "@swc/core": "1.3.56",
     "@tailwindcss/typography": "^0.5.15",
     "@types/lodash-es": "^4.17.9",
     "@types/pluralize": "^0.0.33",
