--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -21,6 +21,8 @@
     "@harnessio/canary": "workspace:*",
     "@harnessio/code-service-client": "3.2.0",
     "@harnessio/forms": "workspace:*",
+    "@harnessio/tailwind-config": "workspace:*",
+    "@harnessio/helpers": "workspace:*",
     "@harnessio/unified-pipeline": "workspace:*",
     "@harnessio/views": "workspace:*",
     "@harnessio/yaml-editor": "workspace:*",
@@ -53,10 +55,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
+    "deepmerge": "^4.3.1",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "postcss": "^8.4.49",
     "prettier": "^3.0.3",
     "react-router-dom": "^6.26.0",
     "tailwindcss": "^3.4.4",
@@ -71,5 +76,11 @@
       "eslint ./src --fix",
       "prettier ./src --write"
     ]
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {},
+      "tailwindcss": {}
+    }
   }
 }
