--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "rimraf": "^6.0.1",
+    "tailwindcss": "^3.4.4",
     "typescript-eslint": "^8.14.0"
   }
 }
