--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck": "pnpm -r typecheck",
     "publish:all": "pnpm publish -r --access public",
     "preinstall": "npx only-allow pnpm",
-    "pre-commit": "pnpm run -r pre-commit"
+    "pre-commit": "lint-staged"
   },
   "engines": {
     "node": ">=18.20.4"
@@ -40,5 +40,11 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "rimraf": "^6.0.1",
     "typescript-eslint": "^8.14.0"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
