--- a/apps/gitness/package.json
+++ b/apps/gitness/package.json
@@ -20,7 +20,8 @@
     "preinstall": "npx only-allow pnpm",
     "pre-commit": "lint-staged",
     "test": "vitest",
-    "compile:lang": "formatjs compile-folder src/lang --ast dist/lang"
+    "compile:lang": "formatjs compile-folder src/lang --ast dist/lang",
+    "extract:lang": "formatjs extract '../../packages/views/src/**/*.{ts,tsx}' --out-file src/locales/en.json --id-interpolation-pattern '[sha512:contenthash:base64:6]' --format simple"
   },
   "dependencies": {
     "@harnessio/canary": "workspace:*",
@@ -30,6 +31,7 @@
     "@harnessio/views": "workspace:*",
     "@harnessio/yaml-editor": "workspace:*",
     "@hookform/resolvers": "^3.6.0",
+    "@swc/plugin-formatjs": "^1.0.1",
     "@tanstack/react-query": "4.36.1",
     "clipboard-copy": "^3.1.0",
     "clsx": "^2.1.1",
@@ -52,6 +54,8 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@formatjs/cli": "^6.3.8",
+    "@formatjs/swc-plugin": "^1.5.23",
+    "@swc/core": "^1.9.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^13.4.0",
     "@types/event-source-polyfill": "^1.0.0",
@@ -59,7 +63,7 @@
     "@types/pluralize": "^0.0.33",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "eslint": "^9.9.0",
     "eslint-plugin-formatjs": "^5.2.2",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
