--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,6 +9,7 @@
     "./components": "./dist/components.js",
     "./views": "./dist/views.js",
     "./hooks": "./dist/hooks.js",
+    "./internationalization": "./dist/internationalization.js",
     "./tailwind.config": "./tailwind.config.js",
     "./styles.css": "./dist/styles.css"
   },
@@ -26,7 +27,8 @@
     "test:coverage": "vitest --run --coverage",
     "test:watch": "vitest",
     "test:changed": "vitest --run --changed=origin/main",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "extract": "i18next 'src/**/*.{js,jsx,ts,tsx}' -o src/components/i18n/locales/en.json"
   },
   "types": "./dist/index.d.ts",
   "style": "./dist/styles.css",
@@ -78,11 +80,13 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
+    "i18next": "^24.0.2",
     "input-otp": "^1.2.4",
     "lodash-es": "^4.17.21",
     "next-themes": "^0.3.0",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.1.1",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.26.0",
     "sonner": "^1.5.0",
@@ -107,6 +111,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.12.0",
+    "i18next-parser": "^9.0.2",
     "jsdom": "^25.0.1",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.11",
